--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
-          server: ftp://109.228.54.30
+          server: ftps://109.228.54.30
           username: ififisuf_user
           password: ${{ secrets.ftp_password }}
           protocol: ftps
