--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,37 @@
-on: push
-name: 🚀 Deploy website on push
+name: CI-SFTP
+
+# Controls when the action will run.
+on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [main]
+  #  pull_request:
+  #    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+  # This workflow contains a single job called "SFTP"
+  deploy-via-sftp:
     runs-on: ubuntu-latest
     steps:
-      - name: 🚚 Get latest code
-        uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+      - name: SFTP Deploy
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.1
         with:
-          server: ftps://109.228.54.30
           username: ififisuf_user
-          password: ${{ secrets.ftp_password }}
-          protocol: ftps
-          port: 2223
+          server: 109.228.54.30
+          port: 2223 # default is 22
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+          # will put all file under this path
+          local_path: ./* # default is ./*
+          # files will copy to under remote_path
+          remote_path: /var/www/vhosts/ifif.isuf.co.uk/httpdocs
+
+          # sftp args
+          args: "-o ConnectTimeout=5"
